cargo-dist/tests/snapshots/cli_tests__lib_manifest.snap
---
source: cargo-dist/tests/cli-tests.rs
expression: format_outputs(&output)
---
stdout:
{
  "dist_version": "1.0.0-FAKEVERSION",
  "announcement_tag": "CENSORED",
  "announcement_is_prerelease": "CENSORED"
  "announcement_title": "CENSORED"
  "announcement_github_body": "CENSORED"
}

stderr:
analyzing workspace:
 WARN rust-toolchain-version is deprecated, use rust-toolchain.toml if you want pinned toolchains
  cargo-dist (didn't match tag cargo-dist-schema-v1.0.0-FAKEVERSION)
    [bin] cargo-dist
  cargo-dist-schema (no binaries)

 WARN You're trying to explicitly Release a library, only minimal functionality will work

