cargo-dist/tests/snapshots/cli_tests__manifest.snap
---
source: cargo-dist/tests/cli-tests.rs
expression: format_outputs(&output)
---
stdout:
{
  "releases": [
    {
      "app_name": "cargo-dist",
      "app_version": "0.2.2-prerelease6",
      "artifacts": [
        {
          "name": "cargo-dist-v0.2.2-prerelease6-x86_64-pc-windows-msvc.pdb",
          "kind": "symbols",
          "target_triples": [
            "x86_64-pc-windows-msvc"
          ]
        },
        {
          "name": "cargo-dist-v0.2.2-prerelease6-x86_64-pc-windows-msvc.zip",
          "kind": "executable-zip",
          "target_triples": [
            "x86_64-pc-windows-msvc"
          ],
          "assets": [
            {
              "name": "cargo-dist",
              "path": "cargo-dist.exe",
              "kind": "executable",
              "symbols_artifact": "cargo-dist-v0.2.2-prerelease6-x86_64-pc-windows-msvc.pdb"
            }
          ]
        },
        {
          "name": "cargo-dist-v0.2.2-prerelease6-x86_64-apple-darwin.tar.xz",
          "kind": "executable-zip",
          "target_triples": [
            "x86_64-apple-darwin"
          ],
          "assets": [
            {
              "name": "cargo-dist",
              "path": "cargo-dist",
              "kind": "executable"
            }
          ]
        },
        {
          "name": "cargo-dist-v0.2.2-prerelease6-x86_64-unknown-linux-gnu.tar.xz",
          "kind": "executable-zip",
          "target_triples": [
            "x86_64-unknown-linux-gnu"
          ],
          "assets": [
            {
              "name": "cargo-dist",
              "path": "cargo-dist",
              "kind": "executable"
            }
          ]
        },
        {
          "name": "installer.sh",
          "kind": "installer",
          "target_triples": [
            "x86_64-apple-darwin",
            "x86_64-unknown-linux-gnu"
          ],
          "install_hint": "curl --proto '=https' --tlsv1.2 -L -sSf https://github.com/axodotdev/cargo-dist/releases/download/v0.2.2-prerelease6/installer.sh | sh"
        },
        {
          "name": "installer.ps1",
          "kind": "installer",
          "target_triples": [
            "x86_64-pc-windows-msvc"
          ],
          "install_hint": "irm 'https://github.com/axodotdev/cargo-dist/releases/download/v0.2.2-prerelease6/installer.ps1' | iex"
        }
      ]
    }
  ]
}

stderr:

