cargo-dist/tests/snapshots/cli_tests__short-help.snap
---
source: cargo-dist/tests/cli-tests.rs
expression: format_outputs(&output)
---
stdout:
Shippable packaging for Rust

Usage: cargo dist [OPTIONS]
       cargo dist <COMMAND>

Commands:
  build        Build distributables for the current platform
  init         Initialize default settings in your Cargo.toml
  generate-ci  Generate CI scripts for orchestrating cargo-dist
  manifest     Generate the final build manifest without running any builds
  help         Print this message or the help of the given subcommand(s)

Options:
      --artifacts <ARTIFACTS>  Which subset of the Artifacts to build [default: host] [possible values: local, global, host, all]
  -h, --help                   Print help information (use `--help` for more detail)
  -V, --version                Print version information

GLOBAL OPTIONS:
      --verbose <VERBOSE>              How verbose logging should be (log level) [default: warn] [possible values: off, error, warn, info, debug, trace]
      --output-format <OUTPUT_FORMAT>  The format of the output [default: human] [possible values: human, json]
      --no-local-paths                 Strip local paths from output (e.g. in the dist manifest json)
      --target <TARGET>                Target triples we want to build
      --installer <INSTALLER>          Installers we want to build [possible values: shell, powershell]
      --ci <CI>                        CI we want to support [possible values: github]
      --tag <TAG>                      The (git) tag to use for the Announcement that each invocation of cargo-dist is performing

stderr:

